--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>23零食铺</title>
     <link rel="stylesheet" type="text/css" href="css of the index.css" />
   </head>
+
   <body class="flex flex1 column">
     <!-- 顶部 -->
     <div
@@ -33,8 +34,20 @@
         </div>
         <div
           style="flex: 1; background-color: #fef6e4"
-          class="flex1 felx biankuang1"
-        ></div>
+          class="flex1 felx biankuang1 column"
+        >
+          <div class="flex column flex1">
+            <p
+              style="font-size: 20px; margin-top: 0; margin-bottom: 25px"
+              class="pa6"
+            >
+              兰陵美酒郁金香，玉碗盛来琥珀光。——李白《客中行》
+            </p>
+          </div>
+          <div style="justify-content: end" class="flex">
+            <a style="margin: 10px; padding: 8px" href="www.github.com">前往</a>
+          </div>
+        </div>
       </div>
       <!-- 2 -->
       <div
@@ -43,8 +56,20 @@
       >
         <div
           style="width: 61.8%; background-color: #f0e2e1"
-          class="flex biankuang1"
-        ></div>
+          class="flex biankuang1 column"
+        >
+          <div class="flex column flex1">
+            <p
+              style="font-size: 20px; margin-top: 0; margin-bottom: 0"
+              class="pa6"
+            >
+              时绕麦田求野荠，强为僧舍煮山羹。——苏轼《次韵子由种菜久旱不生》
+            </p>
+          </div>
+          <div style="justify-content: start" class="flex">
+            <a style="margin: 10px; padding: 8px" href="www.github.com">前往</a>
+          </div>
+        </div>
         <div
           style="flex: 1; background-color: #fbdd74"
           class="flex duiqi biankuang1"
@@ -65,8 +90,20 @@
         </div>
         <div
           style="flex: 1; background-color: #fef6e4"
-          class="flex1 felx biankuang1"
-        ></div>
+          class="flex1 felx biankuang1 column"
+        >
+          <div>
+            <p
+              style="font-size: 20px; margin-top: 0; margin-bottom: 0"
+              class="pa6"
+            >
+              无由持一碗，寄与爱茶人。——白居易《山泉煎茶有怀》
+            </p>
+          </div>
+          <div style="justify-content: end" class="flex">
+            <a style="margin: 10px; padding: 8px" href="www.github.com">前往</a>
+          </div>
+        </div>
       </div>
       <!-- 4 -->
       <div
@@ -76,7 +113,19 @@
         <div
           style="width: 61.8%; background-color: #f2eef5"
           class="felx biankuang1"
-        ></div>
+        >
+          <div class="flex column flex1">
+            <p
+              style="font-size: 20px; margin-top: 0; margin-bottom: 0"
+              class="pa6"
+            >
+              玉芝观里王居士，服气餐霞善养身。——白居易《赠王山人》
+            </p>
+          </div>
+          <div style="justify-content: start" class="flex">
+            <a style="margin: 10px; padding: 8px" href="www.github.com">前往</a>
+          </div>
+        </div>
         <div
           style="flex: 1; background-color: #4fc4cf"
           class="flex duiqi biankuang1"
