--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               兰陵美酒郁金香，玉碗盛来琥珀光。——李白《客中行》
             </p>
           </div>
-          <div style="justify-content: end" class="flex">
+          <div style="justify-content: flex-end" class="flex">
             <a style="margin: 10px; padding: 6px" href="www.github.com">前往</a>
           </div>
         </div>
@@ -92,7 +92,7 @@
           style="flex: 1; background-color: #fef6e4"
           class="flex1 felx biankuang1 column"
         >
-          <div>
+          <div class="flex flex1 column">
             <p
               style="font-size: 20px; margin-top: 0; margin-bottom: 0"
               class="pa6"
@@ -100,7 +100,7 @@
               无由持一碗，寄与爱茶人。——白居易《山泉煎茶有怀》
             </p>
           </div>
-          <div style="justify-content: end" class="flex">
+          <div style="justify-content: flex-end" class="flex flex1">
             <a style="margin: 10px; padding: 6px" href="www.github.com">前往</a>
           </div>
         </div>
@@ -122,7 +122,7 @@
               玉芝观里王居士，服气餐霞善养身。——白居易《赠王山人》
             </p>
           </div>
-          <div style="justify-content: start" class="flex">
+          <div style="justify-content: start" class="flex flex1">
             <a style="margin: 10px; padding: 6px" href="www.github.com">前往</a>
           </div>
         </div>
