--- a/html/lingshi.html
+++ b/html/lingshi.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <!-- ∂•≤ø -->
+    <div style="
+        height: 60px;
+        z-index: 1;
+        text-align: center;
+        justify-content: space-between;
+        align-items: center;
+      " class="flex wqy biankuang">
+        <div class="flex flex1"></div>
+        <h1 style="color: rgb(0, 63, 113)">23¡„ ≥∆Ã</h1>
+        <div style="justify-self: flex-end; margin-right: 10px" class="flex flex1">
+            <a style="
+            font-size: 18px;
+            border: 2px solid rgb(0, 63, 113);
+            padding: 2px;
+          " href="./index.html">∑µªÿ</a>
+        </div>
+
 </body>
+
 </html>
