--- a/html/lingshi.html
+++ b/html/lingshi.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <!-- ¶¥²¿ -->
+    <!-- ï¿½ï¿½ï¿½ï¿½ -->
     <div style="
         height: 60px;
         z-index: 1;
@@ -18,13 +18,13 @@
         align-items: center;
       " class="flex wqy biankuang">
         <div class="flex flex1"></div>
-        <h1 style="color: rgb(0, 63, 113)">23ÁãÊ³ÆÌ</h1>
+        <h1 style="color: rgb(0, 63, 113)">23ï¿½ï¿½Ê³ï¿½ï¿½</h1>
         <div style="justify-self: flex-end; margin-right: 10px" class="flex flex1">
             <a style="
             font-size: 18px;
             border: 2px solid rgb(0, 63, 113);
             padding: 2px;
-          " href="./index.html">·µ»Ø</a>
+          " href="./index.html">ï¿½ï¿½ï¿½ï¿½</a>
         </div>
 
 </body>
