--- a/html/the list.html
+++ b/html/the list.html
@@ -32,7 +32,7 @@
             border: 2px solid rgb(0, 63, 113);
             padding: 2px;
           "
-          href="./index.html"
+          href="/index.html"
           >返回</a
         >
       </div>
