--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>23零食铺</title>
-    <link rel="stylesheet" type="text/css" href="/css/css of the index.css" />
+    <link rel="stylesheet" type="text/css" href="./css/css of the index.css" />
   </head>
 
   <body class="flex flex1 column">
@@ -32,7 +32,7 @@
             border: 2px solid rgb(0, 63, 113);
             padding: 2px;
           "
-          href="/html/the list.html"
+          href="./html/the list.html"
           >订单</a
         >
       </div>
