--- a/html/the list.html
+++ b/html/the list.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/css/list.css" />
+    <link rel="stylesheet" href="../css/list.css" />
   </head>
 
   <body class="flex flex1 column">
@@ -32,7 +32,7 @@
             border: 2px solid rgb(0, 63, 113);
             padding: 2px;
           "
-          href="/index.html"
+          href="../index.html"
           >返回</a
         >
       </div>
@@ -102,6 +102,6 @@
     >
       tianjia
     </button>
-    <script src="/js/list.js"></script>
+    <script src="../js/list.js"></script>
   </body>
 </html>
