--- a/html/the list.html
+++ b/html/the list.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>订单</title>
     <link rel="stylesheet" href="../css/list.css" />
   </head>
 
@@ -96,12 +96,12 @@
         </td>
       </tr>
     </table>
-    <button
-      type="button"
-      onclick="document.getElementById('delete3').style.display=localStorage.getItem('none')"
-    >
-      tianjia
-    </button>
+    <div>
+      <button type="button" onclick="tianjia1()">加入购物车</button>
+      <button type="button" onclick="tianjia2()">加入购物车</button>
+      <button type="button" onclick="tianjia3()">加入购物车</button>
+      <button type="button" onclick="tianjia4()">加入购物车</button>
+    </div>
     <script src="../js/list.js"></script>
   </body>
 </html>
