--- a/html/the list.html
+++ b/html/the list.html
@@ -120,6 +120,11 @@
       var d = localStorage.dianji4;
       document.getElementById("shili").innerHTML = d;
       document.getElementById("n_shili").innerHTML = d * 2 + "元";
+      //实时显示代码块是否可见
+      var xianshi1 = localStorage.delete1;
+      document.getElementById("delete1").style.display = localStorage.delete1;
+      
     </script>
+    <script></script>
   </body>
 </html>
