--- a/html/yangshen.html
+++ b/html/yangshen.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>养生区</title>
+    <title>零食区</title>
+    <link rel="stylesheet" href="../css/lingshi.css" />
   </head>
 
   <body>
@@ -34,6 +35,53 @@
           href="../index.html"
           >返回</a
         >
+      </div>
+    </div>
+    <!-- body -->
+    <div class="felx column" style="flex: 1">
+      <div style="height: 140px" class="flex flex1 mgt50">
+        <div style="width: 38.2%" class="bankuai mg4"></div>
+        <div class="flex flex1 column" style="flex: 1">
+          <div style="height: 70%" class="bankuai mgtb4"></div>
+          <div style="flex: 1" class="flex row mgb4">
+            <div style="flex: 1" class="bankuai"></div>
+            <div style="flex: 3" class="bankuai mgrl4"></div>
+            <div style="flex: 2" class="bankuai"></div>
+          </div>
+        </div>
+      </div>
+      <div style="height: 140px" class="flex flex1 mgt20">
+        <div style="width: 38.2%" class="bankuai mg4"></div>
+        <div class="flex flex1 column" style="flex: 1">
+          <div style="height: 70%" class="bankuai mgtb4"></div>
+          <div style="flex: 1" class="flex row mgb4">
+            <div style="flex: 1" class="bankuai"></div>
+            <div style="flex: 3" class="bankuai mgrl4"></div>
+            <div style="flex: 2" class="bankuai"></div>
+          </div>
+        </div>
+      </div>
+      <div style="height: 140px" class="flex flex1 mgt20">
+        <div style="width: 38.2%" class="bankuai mg4"></div>
+        <div class="flex flex1 column" style="flex: 1">
+          <div style="height: 70%" class="bankuai mgtb4"></div>
+          <div style="flex: 1" class="flex row mgb4">
+            <div style="flex: 1" class="bankuai"></div>
+            <div style="flex: 3" class="bankuai mgrl4"></div>
+            <div style="flex: 2" class="bankuai"></div>
+          </div>
+        </div>
+      </div>
+      <div style="height: 140px" class="flex flex1 mgt20">
+        <div style="width: 38.2%" class="bankuai mg4"></div>
+        <div class="flex flex1 column" style="flex: 1">
+          <div style="height: 70%" class="bankuai mgtb4"></div>
+          <div style="flex: 1" class="flex row mgb4">
+            <div style="flex: 1" class="bankuai"></div>
+            <div style="flex: 3" class="bankuai mgrl4"></div>
+            <div style="flex: 2" class="bankuai"></div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
