--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
             </p>
           </div>
           <div style="justify-content: flex-end" class="flex">
-            <a style="margin: 10px; padding: 6px" href="www.github.com">前往</a>
+            <a style="margin: 10px; padding: 6px" href="./html/xiaochi.html"
+              >前往</a
+            >
           </div>
         </div>
       </div>
@@ -82,7 +84,9 @@
             </p>
           </div>
           <div style="justify-content: start" class="flex">
-            <a style="margin: 8px; padding: 6px" href="www.github.com">前往</a>
+            <a style="margin: 8px; padding: 6px" href="./html/lingshi.html"
+              >前往</a
+            >
           </div>
         </div>
         <div
@@ -116,7 +120,9 @@
             </p>
           </div>
           <div style="justify-content: flex-end" class="flex">
-            <a style="margin: 10px; padding: 6px" href="www.github.com">前往</a>
+            <a style="margin: 10px; padding: 6px" href="./html/yinliao.html"
+              >前往</a
+            >
           </div>
         </div>
       </div>
@@ -138,7 +144,9 @@
             </p>
           </div>
           <div style="justify-content: start" class="flex">
-            <a style="margin: 10px; padding: 6px" href="www.github.com">前往</a>
+            <a style="margin: 10px; padding: 6px" href="./html/yangshen.html"
+              >前往</a
+            >
           </div>
         </div>
         <div
